--- a/index.html
+++ b/index.html
@@ -11,87 +11,15 @@
   <meta property="og:description" content="Photos et vidéos aériennes en Abitibi-Témiscamingue." />
   <meta property="og:type" content="website" />
   <meta name="theme-color" content="#0f1c0f" />
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
-  <style>
-    :root {
-      --bg1:#0f1c0f;
-      --bg2:#263321;
-      --panel:#1b2618;
-      --text:#f5f7f5;
-      --muted:#dfe6de;
-      --accent:#a9c48a;
-      --ring:#8ab570;
-    }
-    *{box-sizing:border-box}
-    body{margin:0;font-family:Inter,system-ui,Segoe UI,Roboto,Helvetica,Arial,sans-serif;
-      background:radial-gradient(circle at top left,var(--bg2),var(--bg1));color:var(--text);}
-    a{color:inherit;text-decoration:none}
-    .container{max-width:1100px;margin-inline:auto;padding:24px}
-    .site-header{display:flex;gap:20px;align-items:center;justify-content:space-between;padding:16px 0 14px;
-      border-bottom:1px solid rgba(255,255,255,.08);margin-bottom:10px;flex-wrap:wrap}
-    .brand{display:flex;align-items:center;gap:12px;font-weight:700}
-    .brand .logo{width:36px;height:36px;border-radius:10px;
-      background:linear-gradient(135deg,var(--accent),var(--ring));
-      display:grid;place-items:center;color:#0f1c0f;font-weight:800}
-    .pill{display:inline-flex;align-items:center;gap:8px;padding:6px 10px;
-      border:1px solid rgba(255,255,255,.08);border-radius:999px;color:var(--muted);font-size:12px;
-      background:rgba(169,196,138,.08)}
-    .hero{padding:56px 0 32px;display:grid;gap:24px;text-align:center}
-    .hero h1{font-size:clamp(28px,5vw,44px);line-height:1.1;margin:0}
-    .hero p{color:var(--muted);max-width:60ch;margin:0 auto}
-    .cta{display:flex;gap:12px;flex-wrap:wrap;justify-content:center;margin-top:12px}
-    .btn{padding:12px 16px;border-radius:12px;border:1px solid rgba(255,255,255,.08);
-      background:rgba(27,38,24,.85);transition:.2s;cursor:pointer;box-shadow:0 12px 28px rgba(0,0,0,.35)}
-    .btn:hover{background:rgba(27,38,24,1)}
-    .btn.primary{background:linear-gradient(135deg,var(--accent),var(--ring));
-      color:#0f1c0f;border:none;font-weight:700;box-shadow:0 14px 32px rgba(0,0,0,.45)}
-    .grid{display:grid;gap:16px;grid-template-columns:repeat(12,1fr)}
-    .card{display:block;grid-column: span 4; background:linear-gradient(135deg,rgba(169,196,138,.06),rgba(27,38,24,.9));
-      border:1px solid rgba(255,255,255,.08);border-radius:16px;padding:18px;
-      box-shadow:0 14px 32px rgba(0,0,0,.45)}
-    .card h3{margin:0 0 6px 0;font-size:16px}
-    .card p{margin:0;color:var(--muted);font-size:14px}
-    .card.clickable{transition:transform .18s ease, border-color .18s ease, box-shadow .18s ease}
-    .card.clickable:hover{border-color:rgba(169,196,138,.35);transform:translateY(-3px);box-shadow:0 18px 36px rgba(0,0,0,.5)}
-    .gallery{display:grid;grid-template-columns:repeat(4,1fr);gap:10px;margin-top:10px}
-    .ph{aspect-ratio:4/3;background:#142014;border:1px solid rgba(255,255,255,.08);
-      border-radius:12px;position:relative;overflow:hidden;box-shadow:0 10px 26px rgba(0,0,0,.4)}
-    .ph::after{content:"";}
-    .footer{margin-top:48px;padding:24px 0;color:rgba(223,230,222,.8);
-      border-top:1px solid rgba(255,255,255,.08);font-size:14px;text-align:center}
-    .about{margin-top:28px;display:grid;grid-template-columns:repeat(12,1fr);gap:18px;align-items:center}
-    .about .copy{grid-column:span 7;background:linear-gradient(135deg,rgba(169,196,138,.06),rgba(27,38,24,.9));border:1px solid rgba(255,255,255,.08);padding:20px;border-radius:16px;box-shadow:0 14px 32px rgba(0,0,0,.45)}
-    .about .copy h2{margin:0 0 8px 0;font-size:20px}
-    .about .copy p{margin:0;color:var(--muted);line-height:1.6}
-    .about figure{grid-column:span 5;margin:0}
-    .about img{width:100%;height:auto;border-radius:16px;border:1px solid rgba(255,255,255,.08);box-shadow:0 12px 28px rgba(0,0,0,.35)}
-    @media (max-width: 900px){ .card{grid-column: span 6} }
-    @media (max-width: 640px){ .card{grid-column: span 12} .nav{gap:12px} }
-    @media (max-width: 768px) {
-      .banner img{height:160px}
-      .gallery {
-        grid-template-columns: 1fr;   /* une seule colonne sur petits écrans */
-        justify-items: center;        /* centre le contenu si la largeur est limitée */
-      }
-
-      .gallery .ph {
-        width: 100%;
-        max-width: 520px;             /* optionnel : limite la largeur max par photo */
-      }
-      .about{grid-template-columns:1fr;}
-      .about .copy, .about figure{grid-column:1/span 1}
-    }
-  </style>
+  <link rel="stylesheet" href="assets/styles.css">
 </head>
 <body>
-  <header class="container site-header">
+  <header class="container site-header border-bottom">
     <div class="brand" aria-label="DV Drone">
       <div class="logo" aria-hidden>DV</div>
       <div>DV Drone <span style="font-weight:500;color:var(--muted)">· Imagerie aérienne</span></div>
     </div>
-    <nav style="display:flex;gap:12px;align-items:center">
+    <nav class="nav-links" aria-label="Navigation principale">
       <a class="pill" href="index.html#services">Services</a>
       <a class="pill" href="photos-aeriennes.html">Portfolio</a>
       <a class="pill" href="index.html#contact">Contact</a>
@@ -130,13 +58,13 @@
     </section>
 
     <section id="portfolio" style="margin-top:28px">
-      <h2 style="margin:0 0 12px 0;font-size:20px">Aperçu de réalisations</h2>
-      <p style="color:var(--muted);margin:0 0 16px 0">
+      <h2 class="section-title">Aperçu de réalisations</h2>
+      <p class="section-lead">
         Quelques exemples de captations aériennes.
         Découvrez davantage de contenus sur
-        <a href="https://facebook.com/dvdrone.abitibi" target="_blank" style="color:var(--accent)">Facebook</a>
+        <a href="https://facebook.com/dvdrone.abitibi" target="_blank">Facebook</a>
         et
-        <a href="https://instagram.com/dvdrone" target="_blank" style="color:var(--accent)">Instagram</a>.
+        <a href="https://instagram.com/dvdrone" target="_blank">Instagram</a>.
       </p>
       <!-- Conteneur vide, rempli dynamiquement par gallery.js -->
       <div id="gallery" class="gallery"></div>
@@ -160,8 +88,8 @@
     </section>
  
     <section id="contact" style="margin-top:32px">
-      <h2 style="margin:0 0 8px 0;font-size:20px">Contact</h2>
-      <p style="color:var(--muted);margin:0 0 12px 0">
+      <h2 class="section-title">Contact</h2>
+      <p class="section-lead" style="margin:0 0 12px 0">
         Vous avez un mandat en tête ? Écrivez-moi et décrivez votre besoin (adresse, type de visuel, échéance).
       </p>
       <div class="cta">
