--- a/photos-aeriennes.html
+++ b/photos-aeriennes.html
@@ -5,240 +5,10 @@
   <title>Photos aériennes – DV Drone</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="Galerie de photos aériennes réalisées par DV Drone en Abitibi-Témiscamingue." />
-  <style>
-    :root {
-      --bg1: #0f1c0f;
-      --bg2: #263321;
-      --panel: rgba(15, 28, 15, 0.82);
-      --card: #f5f7f5;
-      --text: #e8f0e6;
-      --muted: #cfd9cc;
-      --accent: #a9c48a;
-      --shadow: 0 15px 45px rgba(0, 0, 0, 0.35);
-    }
-
-    * { box-sizing: border-box; }
-
-    body {
-      margin: 0;
-      min-height: 100vh;
-      background: linear-gradient(145deg, var(--bg1), var(--bg2));
-      color: var(--text);
-      font-family: "Inter", system-ui, -apple-system, "Segoe UI", sans-serif;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      padding: 32px 18px 48px;
-      gap: 14px;
-    }
-
-    .page {
-      width: 100%;
-      max-width: 1380px;
-      background: var(--panel);
-      border: 1px solid rgba(255, 255, 255, 0.06);
-      box-shadow: var(--shadow);
-      padding: 18px;
-      backdrop-filter: blur(6px);
-      border-radius: 14px;
-    }
-
-    .site-header {
-      width: 100%;
-      max-width: 1380px;
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      gap: 12px;
-      padding: 10px 12px 16px;
-      border: 1px solid rgba(255, 255, 255, 0.06);
-      background: var(--panel);
-      box-shadow: var(--shadow);
-      border-radius: 14px;
-      flex-wrap: wrap;
-      backdrop-filter: blur(6px);
-    }
-
-    .brand {
-      display: flex;
-      align-items: center;
-      gap: 12px;
-      font-weight: 700;
-    }
-
-    .brand .logo {
-      width: 36px;
-      height: 36px;
-      border-radius: 10px;
-      background: linear-gradient(135deg, var(--accent), #8ab570);
-      display: grid;
-      place-items: center;
-      color: #0f1c0f;
-      font-weight: 800;
-    }
-
-    .nav-links {
-      display: flex;
-      gap: 10px;
-      align-items: center;
-      flex-wrap: wrap;
-    }
-
-    .pill {
-      display: inline-flex;
-      align-items: center;
-      gap: 8px;
-      padding: 6px 10px;
-      border: 1px solid rgba(255, 255, 255, 0.08);
-      border-radius: 999px;
-      color: var(--muted);
-      font-size: 12px;
-      background: rgba(169, 196, 138, 0.08);
-    }
-
-    .hero-banner {
-      position: relative;
-      overflow: hidden;
-      border-radius: 12px;
-      padding: 26px 26px 30px;
-      margin-bottom: 20px;
-      isolation: isolate;
-      background: linear-gradient(120deg, rgba(15, 28, 15, 0.75), rgba(27, 38, 24, 0.55)),
-        url('photos/header.jpg') center/cover no-repeat;
-      border: 1px solid rgba(255, 255, 255, 0.07);
-      box-shadow: 0 18px 38px rgba(0, 0, 0, 0.45);
-    }
-
-    .hero-content {
-      position: relative;
-      display: grid;
-      gap: 8px;
-      max-width: 680px;
-      z-index: 1;
-    }
-
-    .eyebrow {
-      display: inline-flex;
-      align-items: center;
-      gap: 8px;
-      padding: 6px 12px;
-      border-radius: 999px;
-      background: rgba(15, 28, 15, 0.5);
-      border: 1px solid rgba(255, 255, 255, 0.08);
-      color: var(--muted);
-      font-size: 12px;
-      width: fit-content;
-      backdrop-filter: blur(5px);
-    }
-
-    h1 {
-      margin: 0;
-      font-size: clamp(26px, 4.5vw, 34px);
-    }
-
-    p.lead {
-      margin: 0;
-      color: var(--muted);
-      font-size: 16px;
-      line-height: 1.6;
-    }
-
-    .meta {
-      display: inline-flex;
-      align-items: center;
-      gap: 10px;
-      background: rgba(15, 28, 15, 0.55);
-      padding: 10px 12px;
-      margin-top: 8px;
-      font-size: 14px;
-      color: var(--muted);
-      border: 1px solid rgba(255, 255, 255, 0.08);
-      border-radius: 10px;
-    }
-
-    #gallery {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(270px, 1fr));
-      gap: 8px;
-      margin-top: 12px;
-    }
-
-    .ph {
-      position: relative;
-      margin: 0;
-      overflow: hidden;
-      border-radius: 8px;
-      background: rgba(255, 255, 255, 0.04);
-    }
-
-    .ph img {
-      display: block;
-      width: 100%;
-      height: auto;
-      border-radius: 8px;
-      cursor: pointer;
-    }
-
-    .btn {
-      border: 1px solid rgba(255, 255, 255, 0.24);
-      background: rgba(255, 255, 255, 0.08);
-      color: #f5f7f5;
-      padding: 10px 14px;
-      border-radius: 10px;
-      cursor: pointer;
-      font-size: 14px;
-      transition: background 0.2s ease, transform 0.2s ease;
-    }
-
-    .btn:hover { background: rgba(255, 255, 255, 0.16); transform: translateY(-2px); }
-    .btn:active { transform: translateY(0); }
-
-    @media (max-width: 700px) {
-      body { padding: 20px 12px 32px; }
-
-      #gallery {
-        grid-template-columns: 1fr;
-      }
-    }
-
-    .footer {
-      margin-top: 26px;
-      display: flex;
-      gap: 12px;
-      flex-wrap: wrap;
-      align-items: center;
-      font-size: 14px;
-      color: var(--muted);
-    }
-
-    .back-link {
-      display: inline-flex;
-      align-items: center;
-      gap: 8px;
-      padding: 10px 14px;
-      background: rgba(255, 255, 255, 0.07);
-      text-decoration: none;
-      color: var(--text);
-      border: 1px solid rgba(255, 255, 255, 0.08);
-      transition: background 0.2s ease, transform 0.2s ease;
-      border-radius: 10px;
-    }
-
-    .back-link:hover { background: rgba(255, 255, 255, 0.12); transform: translateY(-2px); }
-
-    .note {
-      padding: 14px 16px;
-      background: rgba(255, 255, 255, 0.06);
-      border: 1px dashed rgba(255, 255, 255, 0.24);
-      font-size: 14px;
-      color: var(--muted);
-      line-height: 1.5;
-      border-radius: 10px;
-    }
-  </style>
+  <link rel="stylesheet" href="assets/styles.css">
 </head>
-<body>
-  <header class="site-header">
+<body class="page-shell">
+  <header class="site-header frame">
     <div class="brand" aria-label="DV Drone">
       <div class="logo" aria-hidden>DV</div>
       <div>DV Drone <span style="font-weight:500;color:var(--muted)">· Imagerie aérienne</span></div>
@@ -250,7 +20,7 @@
     </nav>
   </header>
   <main class="page">
-    <section class="hero-banner" aria-label="Introduction de la page">
+    <section class="hero-banner hero-photos" aria-label="Introduction de la page">
       <div class="hero-content">
         <span class="eyebrow">Galerie</span>
         <h1>Photos aériennes</h1>
@@ -261,13 +31,13 @@
       </div>
     </section>
 
-    <section id="gallery" aria-label="Galerie des photos aériennes"></section>
+    <section id="gallery" class="gallery-grid" aria-label="Galerie des photos aériennes"></section>
 
     <div class="footer">
       <a class="back-link" href="index.html">
         ← Retour à l'accueil
       </a>
-      <span class="note">Besoin d'une prise de vue similaire ? Écrivez à <a href="mailto:info@dvdrone.ca" style="color: var(--accent); text-decoration: none;">info@dvdrone.ca</a>.</span>
+      <span class="note-box">Besoin d'une prise de vue similaire ? Écrivez à <a href="mailto:info@dvdrone.ca" style="color: var(--accent); text-decoration: none;">info@dvdrone.ca</a>.</span>
     </div>
   </main>
   <script>
