Align homepage with shared layout

--- a/index.html
+++ b/index.html
@@ -4,17 +4,16 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>DV Drone — Imagerie aérienne à Rouyn-Noranda</title>
-  <meta name="description" content="Basé à Rouyn-Noranda, DV Drone est spécialisé dans l’imagerie aérienne pour l’Abitibi-Témiscamingue. 
-        Notre mission est de fournir des visuels clairs, professionnels et accessibles, 
-        que ce soit pour la mise en valeur d’une propriété, le suivi d’un chantier ou une simple vue d’ensemble." />
+  <meta name="description"
+    content="Basé à Rouyn-Noranda, DV Drone est spécialisé dans l’imagerie aérienne pour l’Abitibi-Témiscamingue. Notre mission est de fournir des visuels clairs, professionnels et accessibles, que ce soit pour la mise en valeur d’une propriété, le suivi d’un chantier ou une simple vue d’ensemble." />
   <meta property="og:title" content="DV Drone — Imagerie aérienne" />
   <meta property="og:description" content="Photos et vidéos aériennes en Abitibi-Témiscamingue." />
   <meta property="og:type" content="website" />
   <meta name="theme-color" content="#0f1c0f" />
   <link rel="stylesheet" href="assets/styles.css">
 </head>
-<body>
-  <header class="container site-header border-bottom">
+<body class="page-shell">
+  <header class="site-header frame">
     <div class="brand" aria-label="DV Drone">
       <div class="logo" aria-hidden>DV</div>
       <div>DV Drone <span style="font-weight:500;color:var(--muted)">· Imagerie aérienne</span></div>
@@ -26,19 +25,21 @@
     </nav>
   </header>
 
-  <main class="container">
-    <section class="hero" id="hero">
-      <span class="pill">Rouyn-Noranda, Qc · Abitibi-Témiscamingue</span>
-      <h1>Imagerie aérienne simple, claire et abordable.</h1>
-      <p>Basé à Rouyn-Noranda, DV Drone est spécialisé dans l’imagerie aérienne pour l’Abitibi-Témiscamingue. 
-        Notre mission est de fournir des visuels clairs, professionnels et accessibles, 
-        que ce soit pour la mise en valeur d’une propriété, le suivi d’un chantier ou une simple vue d’ensemble.</p>
-      <div class="cta">
-        <a class="btn primary" href="https://facebook.com/dvdrone.abitibi" target="_blank" rel="noopener">Facebook</a>
-        <a class="btn primary" href="https://instagram.com/dvdrone" target="_blank" rel="noopener">Instagram</a>
-        <a class="btn" href="mailto:info@dvdrone.ca?subject=Demande%20de%20soumission%20DV%20Drone&body=Bonjour%20DV%20Drone%2C%0A%0AMon%20projet%20:%20%0AAdresse%20:%20%0AServices%20souhaités%20:%20%0AÉchéance%20:%20%0A%0AMerci%20!">
-          Demander une soumission
-        </a>
+  <main class="page">
+    <section class="hero-banner hero-home" id="hero" aria-label="Introduction">
+      <div class="hero-content">
+        <span class="pill">Rouyn-Noranda, Qc · Abitibi-Témiscamingue</span>
+        <h1>Imagerie aérienne simple, claire et abordable.</h1>
+        <p class="lead">Basé à Rouyn-Noranda, DV Drone est spécialisé dans l’imagerie aérienne pour l’Abitibi-Témiscamingue.
+          Notre mission est de fournir des visuels clairs, professionnels et accessibles,
+          que ce soit pour la mise en valeur d’une propriété, le suivi d’un chantier ou une simple vue d’ensemble.</p>
+        <div class="cta" style="justify-content:flex-start">
+          <a class="btn primary" href="https://facebook.com/dvdrone.abitibi" target="_blank" rel="noopener">Facebook</a>
+          <a class="btn primary" href="https://instagram.com/dvdrone" target="_blank" rel="noopener">Instagram</a>
+          <a class="btn" href="mailto:info@dvdrone.ca?subject=Demande%20de%20soumission%20DV%20Drone&body=Bonjour%20DV%20Drone%2C%0A%0AMon%20projet%20:%20%0AAdresse%20:%20%0AServices%20souhaités%20:%20%0AÉchéance%20:%20%0A%0AMerci%20!">
+            Demander une soumission
+          </a>
+        </div>
       </div>
     </section>
 
