Update header and layout in HTML pages
Refined the brand display in the header of demo-photogrammetrie.html and adjusted the placement of the back link for improved structure. Removed redundant meta information from photos-aeriennes.html for a cleaner presentation.

--- a/demo-photogrammetrie.html
+++ b/demo-photogrammetrie.html
@@ -19,7 +19,7 @@
   <header class="site-header frame">
     <div class="brand" aria-label="DV Drone">
       <div class="logo" aria-hidden>DV</div>
-      <span class="brand-name">DV Drone · Imagerie aérienne</span>
+      <div>DV Drone <span style="font-weight:500;color:var(--muted)">· Imagerie aérienne</span></div>
     </div>
     <nav class="nav-links" aria-label="Navigation principale">
       <a class="pill" href="index.html#services">Services</a>
@@ -28,8 +28,7 @@
     </nav>
   </header>
   <main class="page">
-    <a href="index.html" class="back-link">← Retour à l'accueil</a>
-    <section class="hero-banner hero-photogrammetry" aria-label="Introduction de la page">
+        <section class="hero-banner hero-photogrammetry" aria-label="Introduction de la page">
       <div class="hero-content">
         <span class="eyebrow">Photogrammétrie</span>
         <h1>Démonstration de couches cartographiques</h1>
@@ -121,6 +120,7 @@
         vérifier rapidement la qualité du vol et des produits.
       </small>
     </section>
+    <a href="index.html" class="back-link">← Retour à l'accueil</a>
   </main>
 
   <!-- Leaflet JS -->
