Remove unused drone-01 image

--- a/accueil.html
+++ b/accueil.html
@@ -14,14 +14,14 @@
 </head>
 <body class="page-shell">
   <header class="site-header frame">
-    <div class="brand" aria-label="DV Drone">
+    <a class="brand" aria-label="DV Drone" href="accueil.html">
       <div class="logo" aria-hidden>DV</div>
       <div>DV Drone <span style="font-weight:500;color:var(--muted)">· Imagerie aérienne</span></div>
-    </div>
+    </a>
     <nav class="nav-links" aria-label="Navigation principale">
-      <a class="pill" href="index.html#services">Services</a>
+      <a class="pill" href="accueil.html#services">Services</a>
       <a class="pill" href="photos-aeriennes.html">Portfolio</a>
-      <a class="pill" href="index.html#contact">Contact</a>
+      <a class="pill" href="accueil.html#contact">Contact</a>
     </nav>
   </header>
 
