--- a/upper-beaver-galerie.html
+++ b/upper-beaver-galerie.html
@@ -9,14 +9,14 @@
 </head>
 <body class="page-shell">
   <header class="site-header frame">
-    <div class="brand" aria-label="DV Drone">
+    <a class="brand" aria-label="DV Drone" href="accueil.html">
       <div class="logo" aria-hidden>DV</div>
       <div>DV Drone <span style="font-weight:500;color:var(--muted)">· Imagerie aérienne</span></div>
-    </div>
+    </a>
     <nav class="nav-links" aria-label="Navigation principale">
-      <a class="pill" href="index.html#services">Services</a>
+      <a class="pill" href="accueil.html#services">Services</a>
       <a class="pill" href="photos-aeriennes.html">Portfolio</a>
-      <a class="pill" href="index.html#contact">Contact</a>
+      <a class="pill" href="accueil.html#contact">Contact</a>
     </nav>
   </header>
   <main class="page">
@@ -32,7 +32,7 @@
     <section id="gallery" class="gallery-grid" aria-label="Galerie des images Upper Beaver"></section>
 
     <div class="footer">
-      <a class="back-link" href="index.html">
+      <a class="back-link" href="accueil.html">
         ← Retour à l'accueil
       </a>
       <span class="note-box">Cette page n'est pas listée dans la navigation principale. Partagez simplement cette URL pour donner accès à la galerie.</span>
