--- a/demo-photogrammetrie.html
+++ b/demo-photogrammetrie.html
@@ -17,14 +17,14 @@
 </head>
 <body class="page-shell">
   <header class="site-header frame">
-    <div class="brand" aria-label="DV Drone">
+    <a class="brand" aria-label="DV Drone" href="accueil.html">
       <div class="logo" aria-hidden>DV</div>
       <div>DV Drone <span style="font-weight:500;color:var(--muted)">· Imagerie aérienne</span></div>
-    </div>
+    </a>
     <nav class="nav-links" aria-label="Navigation principale">
-      <a class="pill" href="index.html#services">Services</a>
+      <a class="pill" href="accueil.html#services">Services</a>
       <a class="pill" href="photos-aeriennes.html">Portfolio</a>
-      <a class="pill" href="index.html#contact">Contact</a>
+      <a class="pill" href="accueil.html#contact">Contact</a>
     </nav>
   </header>
   <main class="page">
@@ -120,7 +120,7 @@
         vérifier rapidement la qualité du vol et des produits.
       </small>
     </section>
-    <a href="index.html" class="back-link">← Retour à l'accueil</a>
+    <a href="accueil.html" class="back-link">← Retour à l'accueil</a>
   </main>
 
   <!-- Leaflet JS -->
