Élargissement image accueil
Agrandissement génératif de l'image d'accuel et suppression des images superflues.

--- a/accueil.html
+++ b/accueil.html
@@ -28,7 +28,7 @@
   <main class="page">
     <section class="hero-banner hero-home" id="hero" aria-label="Introduction">
       <div class="hero-content">
-        <span class="pill">Rouyn-Noranda, Qc · Abitibi-Témiscamingue</span>
+        <span class="eyebrow">Rouyn-Noranda, Qc · Abitibi-Témiscamingue</span>
         <h1>Imagerie aérienne simple, claire et abordable.</h1>
         <p class="lead">Basé à Rouyn-Noranda, DV Drone est spécialisé dans l’imagerie aérienne pour l’Abitibi-Témiscamingue.
           Notre mission est de fournir des visuels clairs, professionnels et accessibles,
