Resize source previews and note sample count

--- a/demo-photogrammetrie.html
+++ b/demo-photogrammetrie.html
@@ -73,8 +73,8 @@
     <section class="source-section" aria-label="Images sources de l'orthophoto">
       <h2>Images sources utilisées pour l'orthophoto</h2>
       <p class="lead">
-        Trois clichés nadir montrant la zone captée lors du vol. Ils illustrent les conditions lumineuses et le niveau de
-        détail qui servent ensuite au traitement photogrammétrique.
+        Un échantillon de trois clichés nadir (sur les 64 capturés) montrant la zone survolée. Ils illustrent les conditions
+        lumineuses et le niveau de détail qui servent ensuite au traitement photogrammétrique.
       </p>
       <div class="source-grid">
         <figure class="source-card">
