Update 'Orthophoto' to 'Photogrammétrie' in navigation
Replaces the term 'Orthophoto' with 'Photogrammétrie' in navigation menus across multiple HTML files for consistency. Also updates the services section in accueil.html to reflect the expanded photogrammetry offering.

--- a/accueil.html
+++ b/accueil.html
@@ -21,7 +21,7 @@
     <nav class="nav-links" aria-label="Navigation principale">
       <a class="pill" href="accueil.html#services">Services</a>
       <a class="pill" href="photos-aeriennes.html">Portfolio</a>
-      <a class="pill" href="demo-photogrammetrie.html">Orthophoto</a>
+      <a class="pill" href="demo-photogrammetrie.html">Photogrammétrie</a>
       <a class="pill" href="accueil.html#contact">Contact</a>
     </nav>
   </header>
@@ -45,13 +45,17 @@
     </section>
 
     <section id="services" class="grid" aria-label="Services">
+      <h2 class="section-title">Services offerts</h2>
+      <p class="section-lead">
+        Voici les différents services offerts par DV Drone.
+      </p>
       <a class="card clickable" href="photos-aeriennes.html">
         <h3>📸 Photos aériennes</h3>
         <p>10–15 photos éditées, prêtes pour Centris et le web. Couleurs équilibrées, horizon droit, export en pleine résolution et format web.</p>
       </a>
       <a class="card clickable" href="demo-photogrammetrie.html">
-        <h3>🗺️ Orthophoto</h3>
-        <p>Photo orthogonale issue d’un traitement photogrammétrique à partir de prises de vue nadir, idéale pour illustrer fidèlement un terrain.</p>
+        <h3>🗺️ Photogrammétrie</h3>
+        <p>Photos orthogonales et données d'élévation issue d’un traitement photogrammétrique à partir de prises de vue nadir, idéale pour illustrer fidèlement un terrain.</p>
       </a>
       <div class="card">
         <h3>🎥 Vidéo courte</h3>
