--- a/upper-beaver-galerie.html
+++ b/upper-beaver-galerie.html
@@ -16,7 +16,7 @@
     <nav class="nav-links" aria-label="Navigation principale">
       <a class="pill" href="accueil.html#services">Services</a>
       <a class="pill" href="photos-aeriennes.html">Portfolio</a>
-      <a class="pill" href="demo-photogrammetrie.html">Orthophoto</a>
+      <a class="pill" href="demo-photogrammetrie.html">Photogrammétrie</a>
       <a class="pill" href="accueil.html#contact">Contact</a>
     </nav>
   </header>
