--- a/accueil.html
+++ b/accueil.html
@@ -44,22 +44,24 @@
       </div>
     </section>
 
-    <section id="services" class="grid" aria-label="Services">
+    <section id="services" aria-label="Services">
       <h2 class="section-title">Services offerts</h2>
       <p class="section-lead">
         Voici les différents services offerts par DV Drone.
       </p>
-      <a class="card clickable" href="photos-aeriennes.html">
-        <h3>📸 Photos aériennes</h3>
-        <p>10–15 photos éditées, prêtes pour Centris et le web. Couleurs équilibrées, horizon droit, export en pleine résolution et format web.</p>
-      </a>
-      <a class="card clickable" href="demo-photogrammetrie.html">
-        <h3>🗺️ Photogrammétrie</h3>
-        <p>Photos orthogonales et données d'élévation issue d’un traitement photogrammétrique à partir de prises de vue nadir, idéale pour illustrer fidèlement un terrain.</p>
-      </a>
-      <div class="card">
-        <h3>🎥 Vidéo courte</h3>
-        <p>Survol de 30–60 s pour médias sociaux. Stabilisation et titre simple inclus.</p>
+      <div class="cards-grid">
+        <a class="card clickable" href="photos-aeriennes.html">
+          <h3>📸 Photos aériennes</h3>
+          <p>10–15 photos éditées, prêtes pour Centris et le web. Couleurs équilibrées, horizon droit, export en pleine résolution et format web.</p>
+        </a>
+        <a class="card clickable" href="demo-photogrammetrie.html">
+          <h3>🗺️ Photogrammétrie</h3>
+          <p>Photos orthogonales et données d'élévation issue d’un traitement photogrammétrique à partir de prises de vue nadir, idéale pour illustrer fidèlement un terrain.</p>
+        </a>
+        <div class="card">
+          <h3>🎥 Vidéo courte</h3>
+          <p>Survol de 30–60 s pour médias sociaux. Stabilisation et titre simple inclus.</p>
+        </div>
       </div>
     </section>
 
