Update page titles to use DV Drone branding
Replaced references to 'Drone Abitibi' with 'DV Drone' in the titles of demo-photogrammetrie.html, photos-aeriennes.html, and upper-beaver-galerie.html for consistent branding.

--- a/photos-aeriennes.html
+++ b/photos-aeriennes.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
   <meta charset="utf-8">
-  <title>Photos aériennes – DV Drone</title>
+  <title>DV Drone – Photos aériennes</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="Galerie de photos aériennes réalisées par DV Drone en Abitibi-Témiscamingue." />
   <link rel="stylesheet" href="assets/styles.css">
