--- a/upper-beaver-galerie.html
+++ b/upper-beaver-galerie.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
   <meta charset="utf-8">
-  <title>Galerie Upper Beaver – Drone Abitibi</title>
+  <title>DV Drone – Galerie Upper Beaver</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="robots" content="noindex">
   <link rel="stylesheet" href="assets/styles.css">
