--- a/demo-photogrammetrie.html
+++ b/demo-photogrammetrie.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
   <meta charset="utf-8">
-  <title>Drone Abitibi – Démonstration photogrammétrie</title>
+  <title>DV Drone – Photogrammétrie</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <!-- Leaflet CSS -->
