--- a/upper-beaver-galerie.html
+++ b/upper-beaver-galerie.html
@@ -25,7 +25,7 @@
       <div class="hero-content">
         <span class="eyebrow">Galerie</span>
         <h1>Galerie Upper Beaver</h1>
-        <p class="lead">Sélection d'images aériennes captées à Upper Beaver. Les images sont présentées à taille généreuse pour une visualisation complète.</p>
+        <p class="lead">Sélection d'images aériennes captées à Upper Beaver. Les images montre le site sous différents angles.</p>
         <div class="meta">Page non répertoriée – partage direct par URL uniquement.</div>
       </div>
     </section>
