Update aerial photos gallery and add new images
Reordered and updated the image list in photos-aeriennes.html, replacing and adding entries for improved accuracy and presentation. Added two new images: larriviere-01.jpg and reboisement-01.jpg to the portfolio directory.

--- a/photos-aeriennes.html
+++ b/photos-aeriennes.html
@@ -45,23 +45,27 @@
       { src: "portfolio/portfolio-21.jpg", alt: "Rouyn-Noranda, Qc" },
       { src: "portfolio/uqat-01.jpg", alt: "UQAT campus de Rouyn-Noranda" },
       { src: "portfolio/uqat-02.jpg", alt: "UQAT centre du Témiscamingue" },
+      { src: "portfolio/portfolio-09.jpg", alt: "Hôpital de Rouyn-Noranda" },
+
+      { src: "portfolio/portfolio-04.jpg", alt: "Parc de la Ribambelle, Ville-Marie, Qc" },
       { src: "portfolio/portfolio-01.jpg", alt: "Vue aérienne d'un stationnement" },
+      { src: "portfolio/portfolio-18.jpg", alt: "Rouyn-Noranda, Qc" },
+      { src: "portfolio/portfolio-07.jpg", alt: "Lac Osisko, Rouyn-Noranda, Qc" },
+
+      { src: "portfolio/portfolio-19.jpg", alt: "UQAT au coucher du soleil" },
+      { src: "portfolio/larriviere-01.jpg", alt: "Avenue Larrivière, Rouyn-Noranda, Qc" },
       { src: "portfolio/portfolio-02.jpg", alt: "Lac Édouard, Parc à fleur d'eau, Rouyn-Noranda, Qc" },
       { src: "portfolio/portfolio-03.jpg", alt: "Tour d'observation Le Nid de l'épervier, Collines Kékéko" },
-      { src: "portfolio/portfolio-04.jpg", alt: "Parc de la ribambelle, Ville-Marie, Qc" },
+
       { src: "portfolio/portfolio-06.jpg", alt: "Pont courvert, St-Eugène de Guigues, Qc" },
-      { src: "portfolio/portfolio-07.jpg", alt: "Lac Osisko, Rouyn-Noranda, Qc" },
-      { src: "portfolio/portfolio-09.jpg", alt: "Hôpital de Rouyn-Noranda" },
-      { src: "portfolio/portfolio-10.jpg", alt: "Sentiers du lac Rouyn, Rouyn-Noranda, Qc" },
-      { src: "portfolio/portfolio-11.jpg", alt: "Lac Beaverhouse, Dobie, ON" },
-      { src: "portfolio/portfolio-13.jpg", alt: "Terrain en reboisement" },
-      { src: "portfolio/portfolio-14.jpg", alt: "Sentier sinueux en gravier" },
-      { src: "portfolio/portfolio-18.jpg", alt: "Rouyn-Noranda, Qc" },
-      { src: "portfolio/portfolio-19.jpg", alt: "UQAT au coucher du soleil" },
-      { src: "portfolio/portfolio-20.jpg", alt: "Avenue Larrivière, Rouyn-Noranda, Qc" },
+      { src: "portfolio/pont-normetal-01.jpg", alt: "Pont couvert, Normétal, Qc" },
       { src: "portfolio/lac-paddle-01.jpg", alt: "Journée de paddle board" },
       { src: "portfolio/maison-lac.jpg", alt: "Résidence en bordure d'un lac" },
-      { src: "portfolio/pont-normetal-01.jpg", alt: "Pont couvert, Normétal, Qc" }
+
+      { src: "portfolio/portfolio-10.jpg", alt: "Sentiers du lac Rouyn, Rouyn-Noranda, Qc" },
+      { src: "portfolio/portfolio-11.jpg", alt: "Lac Beaverhouse, Dobie, ON" },
+      { src: "portfolio/reboisement-01.jpg", alt: "Terre en reboisement" },
+      { src: "portfolio/portfolio-14.jpg", alt: "Sentier sinueux en gravier" },
     ];
   </script>
   <script src="gallery.js"></script>
