Update 'À propos de moi' section content
Rewrote and expanded the 'À propos de moi' section to provide more detailed information about qualifications, expertise in geomatics and GIS, and clarified the nature of deliverables. Improved structure and clarity of the introduction.

--- a/accueil.html
+++ b/accueil.html
@@ -84,16 +84,29 @@
     <section class="about" id="a-propos">
       <div class="copy">
         <h2>À propos de moi</h2>
+
+        <p style="margin-bottom: 1.25rem;">
+          Je m’appelle David Vendette, pilote de drone certifié avec certificat d’opérations avancées.
+          Basé en Abitibi-Témiscamingue, je réalise des images aériennes claires et soignées qui permettent
+          de mieux comprendre un site, un environnement ou une propriété.
+          J’accorde une grande importance à la simplicité, à la qualité visuelle et à la fiabilité des images livrées.
+        </p>
+
         <p>
-          Je m’appelle David Vendette, pilote de drone certifié et passionné par l’imagerie aérienne.
-          J’adore raconter des histoires visuelles claires qui mettent en valeur les paysages et projets de l’Abitibi-Témiscamingue.
-          Chaque mandat est l’occasion de livrer des images précises, professionnelles et adaptées à vos besoins.
+          Je suis étudiant en génie électromécanique et j’ai acquis des connaissances en géomatique et en
+          systèmes d’information géographique (SIG), notamment en traitement d’images aériennes,
+          en cartographie visuelle et en analyse spatiale.
+          Ces compétences me permettent de proposer des visuels structurés et cohérents,
+          à des fins de présentation, de visualisation ou d’analyse technique.
+          Les livrables fournis sont informatifs et visuels et ne constituent pas des documents
+          d’arpentage ou de nature légale.
         </p>
       </div>
-      <figure>
-        <img src="photos/dv-01.jpg" alt="Portrait de David Vendette" width="1600" height="1200" loading="lazy" />
-      </figure>
-    </section>
+
+  <figure>
+    <img src="photos/dv-01.jpg" alt="Portrait de David Vendette" width="1600" height="1200" loading="lazy" />
+  </figure>
+</section>
  
     <section id="contact" style="margin-top:32px">
       <h2 class="section-title">Contact</h2>
